userjava_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userjava
  namespace : api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userjava
  template:
    metadata:
      labels:
        app: userjava
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: userjava
        image: registrywpv6651.azurecr.io/userjava:v1
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: userjava-port
