poi_service.yml
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: api
spec:
  ports:
  - port: 80
  selector:
    app: poi
