trips_services.yml
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: api
spec:
  ports:
  - port: 80
  selector:
    app: trips
