tripviewer_service.yml
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  namespace: web
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: tripviewer
