userjava_service.yml
apiVersion: v1
kind: Service
metadata:
  name: userjava
  namespace : api
spec:
  ports:
  - port: 80
  selector:
    app: userjava
