userprofile_services.yml
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: api
spec:
  ports:
  - port: 80
  selector:
    app: userprofile
