ingress_controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: tabel2aks.9074643857124e10bbcb.northeurope.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: tripviewer
            port: 
              number: 80
      - path: /api/poi
        pathType: Prefix
        backend:
          service: 
            name: poi
            port: 
              number: 80
      - path: /api/user-java
        pathType: Prefix
        backend:
          service: 
            name: userjava
            port: 
              number: 80
      - path: /api/user
        pathType: Prefix
        backend:
          service: 
            name: userprofile
            port: 
              number: 80
      - path: /api/trips
        pathType: Prefix
        backend:
          service: 
            name: trips
            port: 
              number: 80
